<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/profile_picture" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:importantForAutofill="yes"
            android:autofillHints="name"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="yes"
            android:autofillHints="emailAddress"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:autofillHints="password"
            android:layout_marginBottom="24dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:layout_marginBottom="8dp" />


        <Button
            android:id="@+id/btnToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account" />

    </LinearLayout>
</ScrollView>
